# lightning

./: .gitignore  Cargo.toml  README.md  README_RU.md
.github/workflows/: pages.yml  publish-draft.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/assets/: lightning.init.gradle  lightning.sync.init.gradle
crates/cli/src/: affected.rs  config.rs  gitdiff.rs  junit.rs  lock.rs  main.rs  meta.rs  paths.rs  run.rs  sync.rs
crates/cli/tests/: composite.rs
crates/server/: Cargo.toml
crates/server/src/: cache.rs  db.rs  main.rs  score.rs  web.rs
openspec/changes/add-affected-selection/: README.md  design.md  tasks.md
openspec/changes/add-build-telemetry/: README.md  proposal.md  tasks.md
openspec/changes/add-favicon/: proposal.md  tasks.md
openspec/changes/add-flaky-radar/: design.md  tasks.md
openspec/changes/add-remote-build-cache/: proposal.md  tasks.md
openspec/changes/design-test-distribution/: design.md  proposal.md  tasks.md
openspec/changes/fix-duplicate-telemetry-in-composites/: proposal.md
openspec/changes/fix-plugin-only-composite-builds/: proposal.md  tasks.md
openspec/changes/fix-stale-lock-false-positives/: design.md  proposal.md  tasks.md
openspec/specs/affected-selection/: spec.md
openspec/specs/build-telemetry/: spec.md
openspec/specs/cli-upload/: spec.md
openspec/specs/flaky-scoring/: spec.md
openspec/specs/remote-build-cache/: spec.md
openspec/specs/server-ingest/: spec.md
openspec/specs/test-distribution/: spec.md
openspec/specs/web-ui/: spec.md
site/: index.html
tests/fixtures/multimodule/: .gitignore  (+2 more)
(+50 files in other folders)
