[package]
name = "lightning-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lightning"
path = "src/main.rs"

[dependencies]
blake3 = "1.8.5"
clap = { version = "4.6.2", features = ["derive", "env"] }
glob = "0.3.3"
quick-xml = "0.41.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "0.9.8"
ureq = { version = "3.3.0", default-features = false, features = ["json"] }
