[package]
name = "lightning-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.9"
base64 = "0.22.1"
clap = { version = "4.6.2", features = ["derive", "env"] }
regex = "1.13.1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["fs", "macros", "rt-multi-thread"] }
